--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
 .bg-gray-blue {
 	background-color: #546E7A
 }
+
+.links {
+	padding: 1rem;
+}
+
+.links a {
+	margin-right: 1rem;
+	color: orange;
+}
