With image and title above image

--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,7 @@
 	margin-right: 1rem;
 	color: orange;
 }
+
+.titleContainer {
+	background-image: url("https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?auto=compress&cs=tinysrgb&h=350");
+}
